--- a/game.css
+++ b/game.css
@@ -8,7 +8,8 @@ li {
   float: left;
   list-style: none;
   outline: solid;
-  margin: 0px;
+  outline-width: 1px;
+  margin: 1px;
   width: 99px;
   height: 99px;
   font-size: 90px;
