--- a/game.css
+++ b/game.css
@@ -15,6 +15,11 @@ li {
   font-size: 90px;
   text-align: center;
 } 
+#viewtime {
+  left:100px;
+  height: 350px;
+  background: cyan;
+}
 #moves {
   left:100px;
   height: 350px;
